--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-test
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Jaden Concord</title>
+  </head>
+  <body>
+    <main>
+      <h1>Jaden Concord Homepage</h1>
+      <section>
+        <h3>Links</h3>
+        <ul>
+          <li><a href="https://jadenconcord.github.io/a/elementalcss/0-9/elemental.scss">Elemental SCSS</a></li>
+        </ul>
+      </section>
+    </main>
+  </body>
+</html>
