--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <main>
       <h1>Jaden Concord Homepage</h1>
+      <a href="/test.html">test</a>
       <section>
         <h3>Links</h3>
         <ul>
