--- a/index.html
+++ b/index.html
@@ -34,12 +34,22 @@
       </template>
     </section>
     <section>
-      <a href="/text.html">text</a>
-      <h2>Links</h2>
+      <br>
+      <h2>Projects</h2>
       <ul>
         <li><a href="/a/elementalcss/0-9/elemental.scss">Elemental SCSS</a></li>
+        <li><a href="/a/shortcutjs/0-9/shortcut.js">Shortcuts Js</a></li>
+        <li><a href="/theme-generator">Theme Generator</a></li>
+      </ul>
+      <h2>Comming Soon</h2>
+      <ul>
+        <li>ICE JS Framework</li>
+        <li>Quck CSS (extention for elemental)</li>
+        <li>CREAM CSS (Final theme from elemental)</li>
+        <li>Generated Themes for theme generator</li>
       </ul>
     </section>
+    <a href="/text.html">text</a>
   </main>
   <script src="js/ice.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
