--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <h2>Projects</h2>
       <ul>
         <li><a href="/a/elementalcss/0-9/elemental.scss">Elemental SCSS</a></li>
-        <li><a href="/a/shortcutjs/0-9/shortcut.js">Shortcuts Js</a></li>
+        <li><a href="/a/shortcutjs/0-9/shortcut.js">Shortcuts JS</a></li>
+        <li><a href="/a/icejs/0-1/ice.js">ICE JS (in development)</a></li>
         <li><a href="/theme-generator">Theme Generator</a></li>
       </ul>
       <h2>Comming Soon</h2>
