Fixed issue with content floating by posts

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </section>
           </a>
         </div>
+        <div class="clear"></div>
         {/each}
       </template>
     </section>
