added theme widget

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   </main>
   <script src="js/ice.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
+  <script src="js/themewidget.js" charset="utf-8"></script>
 </body>
 
 </html>
